can be implemented as a custom SIRT method.

New demo demo_matrixfree to illustrate the use of matrix-free versions of test
problem operators and reconstruction methods.

New demo demo_relaxpar to illustrate the use of different relaxation 
parameter selection strategies.

New demo demo_stoprules to illustrate use of different stopping rules.

New function show_tomo to illustrate tomography test problem by displaying 
rows of matrix as images. Also new demo demo_show_tomo to illustrate all 
tomography test problems using both the isDisp input of tomography test 
problem functions and the new show_tomo function.

New options waitbar and verbose to allow displaying/printing progress.

Made computation of upper bound for relaxation parameter in SIRT methods 
deterministic by using fixed random number generating settings (and 
restoring previous settings afterwards) in call to builtin function eigs, 
which by default uses a random starting vector, thus causing (very minor)
random variations in the computed rho.

Previous functions trainLambdaART and trainLambdaSIRT have been simplified 
and merged into new function train_relaxpar, which also supports training 
of relaxation parameter for the the CART method columnaction.




Revisions in Version 1.3
------------------------

A bug was found in fanbeamtomo, paralleltomo, and seismictomo that caused
some elements of the matrix A to incorectly be set to zero; it was fixed
in Version 1.2.

All iterative methods run faster and use less memory.

fanbeamtomo and paralleltomo now return the correct d.

rzr allows b with multiple columns.

All iterative methods now include box constraints.

All ART methods now include a damping factor to avoid division by
very small norms.

All SIRT methods had some of the stopping rules changed:
 - DP now always uses the standard residual vector r^k = b - A x^k,
 - ME now always uses 0.5 r^k'(r^{k+1}+r^k)/||r^k||_2.

The default value for lambda was changed to 1 in kaczmarz and symkaczmarz.
